--- a/bevy_rapier_01/Cargo.toml
+++ b/bevy_rapier_01/Cargo.toml
@@ -12,6 +12,7 @@ bevy_rapier2d = { version = "0.25", features = [
 sha2 = "0.10.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+image = "0.25.1"
 
 
 [lib]
@@ -20,6 +21,10 @@ crate-type = ["cdylib", "rlib"]
 [[bin]]
 name = "main_desktop"
 path = "src/main.rs"
+
+[[bin]]
+name = "level_generator"
+path = "src/bin/level_generator.rs"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 uuid = { version = "1.13.1", default-features = false, features = ["js"] }
